--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -11,37 +11,51 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <!-- CODIGO PARA PERSONALIZAR -->
-    <form method="POST" action="/guardar-datos">
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" />
 
-      <label for="apellido">Apellido:</label>
-      <input type="text" id="apellido" name="apellido" />
+    <div id="register-form">
+      <div class="fullcontent">
+        <div class="headings">
+          <h1>Biblo - Register</h1>
+          <h2>Create an account to shop</h2>
+        </div>
+        <div class="formbox">
+          <h3>Register</h3>
+          <form id="register-form" method="POST" action="/guardar-datos">
+            <form method="POST" action="/guardar-datos">
+              <label for="nombre">Nombre:</label>
+              <input type="text" id="nombre" name="nombre" class="asd"/>
+        
+              <label for="apellido">Apellido:</label>
+              <input type="text" id="apellido" name="apellido"  class="asd" />
+        
+              <label for="correo">Correo:</label>
+              <input type="email" id="correo" name="correo"  class="asd" />
+        
+              <label for="userName">Nombre de usuario:</label>
+              <input type="text" id="userName" name="userName"  class="asd" />
+        
+              <label for="password">Contraseña:</label>
+              <input type="password" id="password" name="password"  class="asd" />
+        
+              <% if( typeof userRole !== 'undefined' && userRole === 'Admin' ) { %>
+                <select id="options" name="options" class="form form-options">
+                  <option value="Admin">Administrador</option>
+                  <option value="User">Usuario</option>
+                </select>
+              <% } else {%>
+                <input type="text" readonly name="options" value="User" class="asd">
+              <% } %>
 
-      <label for="correo">Correo:</label>
-      <input type="email" id="correo" name="correo" />
+            <input id="btn" type="submit" name="submit" value="Register" class="mainbox">
+            <label for="">Already have an account?</label>
+            <a id="login-link" class="mainbox" href="/SignIn">Log In</a>
+          </form>
+        </div>
+      </div>
+    </div>
 
-      <label for="userName">Nombre de usuario:</label>
-      <input type="text" id="userName" name="userName" />
-
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" />
-
-      <% if( typeof userRole !== 'undefined' && userRole === 'Admin' ) { %>
-        <select id="options" name="options">
-          <option value="Admin">Administrador</option>
-          <option value="User">Usuario</option>
-        </select>
-      <% } else {%>
-        <input type="text" readonly name="options" value="User">
-      <% } %>
-
-      <button type="submit">Guardar</button>
-      <a href="/SignIn" class="m-3">Iniciar Sesion</a>
-    </form>
-    <!-- CODIGO PARA PERSONALIZAR -->
   </body>
 </html>
